<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/beige"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/compass" />

        <TextView
            android:id="@+id/label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="270"
            android:text="Label #1"
            android:textColor="@color/burgundy"
            android:textSize="20dp"
            app:layout_constraintCircle="@+id/compass"
            app:layout_constraintCircleAngle="270"
            app:layout_constraintCircleRadius="170dp"/>

        <TextView
            android:id="@+id/label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="Label #2"
            android:textColor="@color/burgundy"
            android:textSize="20dp"
            app:layout_constraintCircle="@+id/compass"
            app:layout_constraintCircleAngle="180"
            app:layout_constraintCircleRadius="170dp"/>

        <TextView
            android:id="@+id/label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="0"
            android:text="Label #3"
            android:textColor="@color/burgundy"
            android:textSize="20dp"
            app:layout_constraintCircle="@+id/compass"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="170dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="@color/burgundy"
        android:onClick="onBackClicked"
        android:text="Back"
        android:textColor="@color/beige"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compass"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="@color/burgundy"
        android:onClick="onClearClicked"
        android:text="Clear"
        android:textColor="@color/beige"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compass" />

</androidx.constraintlayout.widget.ConstraintLayout>